@@ -1,6 +1,6 @@
 Package: R2jags
-Version: 0.04-02
-Date: 2014-5-30
+Version: 0.04-03
+Date: 2014-6-19
 Title: A Package for Running jags from R
 Author: Yu-Sung Su <suyusung@tsinghua.edu.cn>,
         Masanao Yajima <yajima@stat.ucla.edu>,
