@@ -5,6 +5,7 @@ jags.parallel <- function (data, inits, parameters.to.save, model.file = "model.
                            n.cluster = n.chains, DIC = TRUE,
                            working.directory = NULL, jags.seed = 123, digits = 5,
                            RNGname = c("Wichmann-Hill", "Marsaglia-Multicarry", "Super-Duper", "Mersenne-Twister"),
+                           jags.module = c("glm", "dic"),
                            envir = .GlobalEnv
                             )
 {
@@ -27,6 +28,7 @@ jags.parallel <- function (data, inits, parameters.to.save, model.file = "model.
                     progress.bar       = "none",
                     digits             = eval(expression(digits)),
                     RNGname            = eval(expression(RNGname)),
+                    jags.module        = eval(expression(jags.module)),
                     )
     return(jagsfit)
   }
