@@ -23,7 +23,8 @@ jags(data, inits, parameters.to.save, model.file="model.bug",
   DIC=TRUE, working.directory=NULL, jags.seed = 123,
   refresh = n.iter/50, progress.bar = "text", digits=5,
   RNGname = c("Wichmann-Hill", "Marsaglia-Multicarry",
-              "Super-Duper", "Mersenne-Twister")
+              "Super-Duper", "Mersenne-Twister"),
+  jags.module = c("glm","dic")
   )
 
 jags.parallel(data, inits, parameters.to.save, model.file = "model.bug",
@@ -33,6 +34,7 @@ jags.parallel(data, inits, parameters.to.save, model.file = "model.bug",
              working.directory = NULL, jags.seed = 123, digits=5,
              RNGname = c("Wichmann-Hill", "Marsaglia-Multicarry",
               "Super-Duper", "Mersenne-Twister"),
+             jags.module = c("glm","dic"),
              envir = .GlobalEnv
              )
 
@@ -101,6 +103,7 @@ jags2(data, inits, parameters.to.save, model.file="model.bug",
   \item{RNGname}{the name for random number generator used in JAGS. There are four RNGS
   supplied by the base moduale in JAGS: \code{Wichmann-Hill}, \code{Marsaglia-Multicarry},
   \code{Super-Duper}, \code{Mersenne-Twister}}
+  \item{jags.module}{the vector of jags modules to be loaded.  Default are \dQuote{glm} and \dQuote{dic}. Input NULL if you don't want to load any jags module.}
   \item{envir}{default is .GlobalEnv}
 }
 
